--- a/ansible/roles/setup/tasks/main.yml
+++ b/ansible/roles/setup/tasks/main.yml
@@ -1,13 +1,25 @@
 ---
+- name: Setup podman VM
+  block:
+    - name: Creacion de directorios de configuracion del contenedor
+      ansible.builtin.file:
+        path: "{{ base_config_dir }}/{{ item }}"
+        state: directory
+      with_items:
+        - "{{ preconf_dirs }}"
 
-- name: Creacion de directorios de configuracion del contenedor
-  ansible.builtin.file:
-    path: "{{ base_config_dir }}/{{ item }}"
-    state: directory
-  with_items:
-    - "{{ preconf_dirs }}"
+    - ansible.builtin.include_tasks: "01-OSPackages.yml"
+    - ansible.builtin.include_tasks: "02-nginx.yml"
+    - ansible.builtin.include_tasks: "03-ssl.yml"
+    - ansible.builtin.include_tasks: "04-podman.yml"
+  when: 
+    - "'vm' in group_names"
 
-- ansible.builtin.include_tasks: "01-OSPackages.yml"
-- ansible.builtin.include_tasks: "02-nginx.yml"
-- ansible.builtin.include_tasks: "03-ssl.yml"
-- ansible.builtin.include_tasks: "04-podman.yml"
+- name: Setup Kubernetes Cluster
+  block:
+    - name: debug 
+      debug:
+        var: "{{ group_names }}"
+  
+  when:
+    - "'k8s' in group_names"
