going forward with k8s setup

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,14 +1,11 @@
 
-
-
-
-
-[k8s]
+[all:vars]
+ak8s_app_src_registry="docker.io/pihole/pihole"
+ak8s_app_name="pihole"
+ak8s_kube_config=""
 
 [vm]
 podman 
-
-[k8s:vars]
 
 [vm:vars]
 base_packages=["podman", "openssl", "python3-passlib"]
@@ -16,11 +13,13 @@ base_config_dir="web_config"
 cert_dir="cert"
 nginx_dir="nginx"
 html_dir="html"
-preconf_dirs=["{{ cert_dir }}", "{{ nginx_dir }}", "{{ html_dir }}"]
+k8s_dir="k8s"
+preconf_dirs=["{{ cert_dir }}", "{{ nginx_dir }}", "{{ html_dir }}", "{{ k8s_dir }}"]
 
 # nginx
 nginx_passwd_file_name=".passwdfile"
 nginx_basic_user="vm_admin"
+web_name="nginx_web"
 
 # SSL
 ssl_key_file="podman.key"
@@ -35,3 +34,5 @@ ssl_org_unit="DevOps"
 
 # Systemd
 systemd_unit_path="/etc/systemd/system/"
+# Images
+images_to_remove=['docker.io/pihole/pihole', 'cp2acr.azurecr.io/nginx_web', 'docker.io/library/nginx']
