--- a/ansible/roles/setup/tasks/01-OSPackages.yml
+++ b/ansible/roles/setup/tasks/01-OSPackages.yml
@@ -10,13 +10,23 @@
   become_user: root
   become_method: sudo
 
-- name: Instalacion de dependencias del SO
+- name: Instalacion de dependencias del Sistema Operativo
   ansible.builtin.apt:
     name: "{{ item }}"
     autoclean: true
     state: present
   with_items:
     - "{{ base_packages }}"
+  become: true
+  become_user: root
+  become_method: sudo
+
+- name: Instalacion de dependencias de pip
+  pip:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - "{{ pip_packages }}"
   become: true
   become_user: root
   become_method: sudo
