fixes and added podman web container status check

--- a/ansible/roles/setup/tasks/04-podman.yml
+++ b/ansible/roles/setup/tasks/04-podman.yml
@@ -46,32 +46,47 @@
   become_user: root
   become_method: sudo
 
-- name: Contenedor configurado e iniciado
+- name: Se reinicia el contenedor via systemd
   systemd:
     name: "container-{{ web_name }}"
     daemon_reload: yes
-    state: started
+    state: restarted
     enabled: yes
   become: true
   become_user: root
   become_method: sudo
 
-- name: Podman Containerfile template
-  ansible.builtin.template:
-    src: "k8s_containerfile.j2"
-    dest: "{{ base_config_dir }}/{{ k8s_dir }}/Containerfile"
+- name: Chequeo si es necesario un reboot de la vm
+  stat:
+    path: /var/run/reboot-required
+  register: reboot
 
-- name: Creacion de la imagen web de k8s
-  containers.podman.podman_image:
-    name: "{{ ak8s_app_name }}"
-    path: "{{ base_config_dir }}/{{ k8s_dir }}"
-    build:
-      cache: no
-      force_rm: yes
-    push: true
-    push_args:
-      dest: "{{ acrcp2_url }}"
+- debug:
+    msg: "Reboot required"
+  when: reboot.stat.exists
+
+- name: Reinicio de la vm
+  reboot: 
+    reboot_timeout: 3600
+  when: reboot.stat.exists
   become: true
   become_user: root
   become_method: sudo
 
+- name: Chequeo de la aplicacion nginx
+  ansible.builtin.uri:
+    method: GET
+    url: "https://{{ ansible_host }}/"
+    user: "{{ nginx_basic_user }}"
+    password: "{{ nginx_user_password }}"
+    force_basic_auth: true
+    validate_certs: no
+    return_content: true
+  register: httpsresult
+
+- name: La aplicacion de nginx no responde
+  any_errors_fatal: true
+  fail:
+      msg: 'El servicio de nginx no responde'
+  when: 
+    - httpsresult.status != 200
