--- a/ansible/roles/setup/tasks/04-podman.yml
+++ b/ansible/roles/setup/tasks/04-podman.yml
@@ -1,5 +1,5 @@
 ---
-- ansible.builtin.include_tasks: "ACR_login.yml"
+- ansible.builtin.include_tasks: "include/ACR_login.yml"
 
 - name: Podman Containerfile template
   ansible.builtin.template:
