--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,12 +2,12 @@
 inventory=inventory/hosts.ini
 callbacks_enabled = profile_tasks
 vault_password_file=.vaultpasswd
-strategy=linear
 host_key_checking=false
 remote_tmp=/tmp
 timeout=60
+forks=10
 
 [connection]
 pipelining=true
-ssh_args = -o ControlPersist=60s -o PreferredAuthentications=publickey
+ssh_args = -o ControlMaster=auto ControlPersist=60s -o PreferredAuthentications=publickey
 scp_if_ssh=true
